# FeistelCalculator

./: CMakeLists.txt  LICENSE
FeistelCalc/: CMakeLists.txt  FeistelCalc.cpp  FeistelCalc.h
FeistelCalc/configs/: DES.h  SIMPLE.h
FeistelCalc/expression/: BitVector.h  Concat.h  Rotate.h  Sbox.h  Substitution.h
